1. Added animation of path following 2. Added point selection on the map

--- a/data_storage/config.yaml
+++ b/data_storage/config.yaml
@@ -9,3 +9,4 @@ safety_distance: 0 # how close the wheelchair can approach obstacles
 colliders: './data_storage/colliders.csv'
 grid_save: './data_storage/grid.csv'
 skeleton_save: './data_storage/skeleton.csv'
+path_save: 'data_storage/path.csv'
