--- a/data_storage/config.yaml
+++ b/data_storage/config.yaml
@@ -4,9 +4,9 @@ final_position: [650, 530] # default position for testing
 wheelchair_length: 0.7 # 70 cm
 wheelchair_width: 0.3 # 30 cm
 
-safety_distance: 0 # how close the wheelchair can approach obstacles
+safety_distance: 0.5 # how close the wheelchair can approach obstacles
 
 colliders: './data_storage/colliders.csv'
 grid_save: './data_storage/grid.csv'
 skeleton_save: './data_storage/skeleton.csv'
-path_save: 'data_storage/path.csv'
+path_save: './data_storage/path.csv'
