1. Fixed functions to create Vector Field Histogram 2. Fixed scanning simulation function 3. Added modified environment representation

--- a/data_storage/config.yaml
+++ b/data_storage/config.yaml
@@ -5,6 +5,7 @@ wheelchair_length: 0.7 # 70 cm
 wheelchair_width: 0.3 # 30 cm
 
 safety_distance: 0.5 # how close the wheelchair can approach obstacles
+lidar_radius: 30 # get the scanning range in meters
 
 colliders: './data_storage/colliders.csv'
 grid_save: './data_storage/grid.csv'
