--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy~=1.19.5
-matplotlib~=3.3.4
-scikit-image~=0.17.2
-tqdm~=4.64.1
-PyYAML~=6.0.1
+numpy>=1.19.5
+matplotlib>=3.3.4
+pandas>=1.1.5
+scikit-image>=0.17.2
+tqdm>=4.64.1
+PyYAML>=6.0.1
