--- a/data_storage/config.yaml
+++ b/data_storage/config.yaml
@@ -4,7 +4,7 @@ final_position: [650, 530] # default position for testing
 wheelchair_length: 0.7 # in meters
 wheelchair_width: 0.3 # in meters
 
-safety_distance: 0.1 # how close the wheelchair can approach obstacles
+safety_distance: 3.0 # how close the wheelchair can approach obstacles
 lidar_radius: 30 # get the scanning range in meters
 distance_tolerance: 0.5 # in meters
 map_figure_size: 12
@@ -19,12 +19,12 @@ sector_angle: 1 # alpha constant of VFH
 a: 1
 b: 1
 l: 3 # max is 18. 6 is suggested
-vfh_threshold: 0.05 # *100%
 vfh_time_delay: 500 # ms
-vfh_height_threshold: 0.15 # cm
+vfh_threshold: 0.1
 
 # LIDAR blind angles
 blind_spot_range: [135, 225] # (from, to) range of blind spot in degrees
+lidar_height_threshold: 0.15 # cm
 
 # Island configuration
 font_size: 10
