--- a/data_storage/config.yaml
+++ b/data_storage/config.yaml
@@ -4,7 +4,7 @@ final_position: [650, 530] # default position for testing
 wheelchair_length: 0.7 # in meters
 wheelchair_width: 0.3 # in meters
 
-safety_distance: 0.30 # how close the wheelchair can approach obstacles
+safety_distance: 0.25 # how close the wheelchair can approach obstacles
 lidar_radius: 30 # get the scanning range in meters
 distance_tolerance: 0.05 # in meters
 map_figure_size: 12
@@ -13,18 +13,20 @@ colliders: './data_storage/colliders.csv'
 grid_save: './data_storage/grid.csv'
 skeleton_save: './data_storage/skeleton.csv'
 path_save: './data_storage/path.csv'
+path_movement_control_module: "/home/aims/Desktop/Alisher/move_init.py"  # modify
 
 # VFH config
 sector_angle: 1 # alpha constant of VFH
 a: 1
 b: 1
-l: 3 # max is 18. 6 is suggested
-vfh_time_delay: 500 # ms
+l: 6 # max is 18. 6 is suggested
+vfh_time_delay: 1000 # ms
 vfh_threshold: 0.1
 
 # LIDAR blind angles
 blind_spot_range: [225, 225] # (from, to) range of blind spot in degrees
-lidar_height_threshold: 0.15 # m
+observation_range: [-120, 120]
+lidar_height_threshold: 0.1 # m
 
 # Island configuration
 font_size: 10
