--- a/data_storage/config.yaml
+++ b/data_storage/config.yaml
@@ -5,12 +5,14 @@ wheelchair_length: 0.7 # in meters
 wheelchair_width: 0.3 # in meters
 
 safety_distance: 0.25 # how close the wheelchair can approach obstacles
-lidar_radius: 30 # get the scanning range in meters
+lidar_radius: 80 # get the scanning range in meters
 distance_tolerance: 0.05 # in meters
 map_figure_size: 12
+map_density: 0.5 # in meters
 
 colliders: './data_storage/colliders.csv'
 grid_save: './data_storage/grid.csv'
+lab_grid_save: 'data_storage/testing_grid.csv'
 skeleton_save: './data_storage/skeleton.csv'
 path_save: './data_storage/path.csv'
 path_movement_control_module: "/home/aims/Desktop/Alisher/move_init.py"  # modify
@@ -21,10 +23,10 @@ a: 1
 b: 1
 l: 6 # max is 18. 6 is suggested
 vfh_time_delay: 1000 # ms
-vfh_threshold: 0.1
+vfh_threshold: 0.2
 
 # LIDAR blind angles
-blind_spot_range: [225, 225] # (from, to) range of blind spot in degrees
+blind_spot_range: [120, 240] # (from, to) range of blind spot in degrees
 observation_range: [-120, 120]
 lidar_height_threshold: 0.1 # m
 
